@@ -44,6 +44,9 @@ import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -113,7 +116,7 @@ public class SyncPortProcessor extends AbstractProcessor {
 
     @Override
     public Set<String> getSupportedAnnotationTypes() {
-        return Set.of(SYNC_PORT_CLASS_NAME, SYNC_PORTS_CLASS_NAME);
+        return Collections.unmodifiableSet(new LinkedHashSet<>(Arrays.asList(SYNC_PORT_CLASS_NAME, SYNC_PORTS_CLASS_NAME)));
     }
 
     private void compareDigest(MessageDigest md, AnnotationMirror annotationMirror, Element element, Proxy proxy) throws IOException, URISyntaxException {
@@ -206,8 +209,8 @@ public class SyncPortProcessor extends AbstractProcessor {
                                     latestCommit,
                                     path);
                     if (shouldDump) {
-                        dump(proxy, urlOld, lineStart - 1, lineEnd, element + ".old");
-                        dump(proxy, url, lineStart - 1, lineEnd, element + ".new");
+                        dump(proxy, urlOld, lineStart - 1, lineEnd, "old", element.toString());
+                        dump(proxy, url, lineStart - 1, lineEnd, "new", element.toString());
                     }
                 }
             } else {
@@ -222,6 +225,9 @@ public class SyncPortProcessor extends AbstractProcessor {
                                 lineStart,
                                 lineEnd,
                                 sha1Latest);
+                if (dumpUpdateCommands != null) {
+                    dumpUpdateCommands.printf("sed -i s+%s+%s+g $(git grep --files-with-matches %s)%n", sha1, sha1Latest, sha1);
+                }
             }
             env().getMessager().printMessage(kind,
                             String.format("Sha1 digest of %s (ported by %s) does not match https://github.com/%s/jdk/blob%s/%s#L%d-L%d : expected %s but was %s.%s",
@@ -286,11 +292,16 @@ public class SyncPortProcessor extends AbstractProcessor {
         return -1;
     }
 
-    private static void dump(Proxy proxy, String url, int lineStartExclusive, int lineEnd, String fileName) throws IOException, URISyntaxException {
+    private static void dump(Proxy proxy, String url, int lineStartExclusive, int lineEnd, String dirName, String fileName) throws IOException, URISyntaxException {
         URLConnection connection = new URI(url).toURL().openConnection(proxy);
         try (BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
             String content = in.lines().skip(lineStartExclusive).limit(lineEnd - lineStartExclusive).collect(Collectors.joining("\n"));
-            try (PrintWriter out = new PrintWriter(fileName + ".tmp")) {
+            File directory = new File(dirName);
+            if (!directory.exists()) {
+                directory.mkdir();
+            }
+
+            try (PrintWriter out = new PrintWriter(dirName + "/" + fileName + ".tmp")) {
                 out.print(content);
                 out.print('\n');
             }
